--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link href="assets/css/flat-ui.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-animate.js"></script>
 
     <script src="app/app.js"></script>
 
@@ -23,6 +24,10 @@
     <script src="app/tags/tag.service.js"></script>
   </head>
   <body>
+    <div class="topright">
+      <a class="btn btn-info btn-xs btn-embossed" href>Tip</a>
+      <a class="btn btn-danger btn-xs btn-embossed" href>Help</a>
+    </div>
     <div class="text-center" id="beta">
       <span class="label label-danger">BETA</span>
     </div>
@@ -34,52 +39,57 @@
       <div class="row">
         <div class="col-xs-8 col-xs-offset-2 menu">
           <div class="row search">
-            <div class="form-group">
-              <div class="input-group">
-                <input type="text" class="form-control search" placeholder="Search controls..">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" type="button">Search</button>
-                </span>
-              </div>
-            </div>
+            <input type="text" class="form-control search" placeholder="Search controls..">
           </div>
           <div ng-controller="TagController as tagCtrl">
             <div class="row tags">
               <span class="tag label label-default" ng-repeat="tag in tagCtrl.tags" ng-click="tagCtrl.toggleTag(tag)" ng-class="{ selected:tagCtrl.tagIsSelected(tag) }">{{ tag }}</span>
             </div>
             <div class="row options">
-              <a class="btn btn-primary btn-xs btn-embossed pull-left" href ng-click="tagCtrl.clearTags()">Clear tags</a>
-              <a class="btn btn-danger btn-xs btn-embossed pull-right" href>Help</a>
+              <a class="btn btn-primary btn-sm btn-embossed pull-left" href ng-click="tagCtrl.clearTags()">Clear tags</a>
+              <div class="btn-toolbar">
+                <div class="btn-group">
+                  <a href="#" class="btn btn-sm btn-primary active"><i class="fa fa-th"></i></a>
+                  <a href="#" class="btn btn-sm btn-primary"><i class="fa fa-list"></i></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row cols" ng-controller="ControlController as controlCtrl">
-        <div class="tile" ng-repeat="control in controlCtrl.controls | filter:controlCtrl.tags">
-            <div class="tile-title">
-              {{ control.name }}
-            </div>
-            <div class="tile-body">
-              <div class="row images">
-                <div class="col-xs-10 col-xs-offset-1">
-                  <img ng-src="{{ control.images[0] }}" class="img-responsive img-rounded">
+      <div class="row tile-container" ng-controller="ControlController as controlCtrl">
+        <div class="cols">
+          <div class="tile" ng-repeat="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags)">
+              <div class="tile-title">
+                {{ control.name }}
+              </div>
+              <div class="tile-body">
+                <div class="row images">
+                  <div class="col-xs-10 col-xs-offset-1">
+                    <img ng-src="{{ control.images[0] }}" class="img-responsive img-rounded">
+                  </div>
+                </div>
+                <div class="row tile-description">
+                  {{ control.description }}
+                </div>
+                <div class="row tile-tags">
+                  <div class="col-xs-12">
+                    <span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span>
+                  </div>
                 </div>
               </div>
-              <div class="row tile-description">
-                {{ control.description }}
-              </div>
-              <div class="row tags">
-                <div class="col-xs-12">
-                  <span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span>
+              <div class="tile-footer">
+                <div class="btn-group btn-group-justified">
+                  <a class="btn btn-xs btn-default" href="{{ control.link }}"><i class="fa fa-2x fa-github"></i></a>
+                  <a class="btn btn-xs btn-default" href><i class="fa fa-2x fa-ellipsis-h"></i></a>
                 </div>
               </div>
-            </div>
-            <div class="tile-footer">
-              <div class="btn-group btn-group-justified">
-                <a class="btn btn-xs btn-default" href="{{ control.link }}"><i class="fa fa-2x fa-github"></i></a>
-                <a class="btn btn-xs btn-default" href><i class="fa fa-2x fa-ellipsis-h"></i></a>
-              </div>
-            </div>
+          </div>
+        </div>
+        <div class="message" ng-show="!filteredControls.length">
+          <div class="col-xs-12 text-center">
+            <h4>No controls found :(</h4>
+          </div>
         </div>
       </div>
     </div>
