--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
         <a class="btn btn-primary btn-sm btn-embossed pull-left" href ng-click="tagCtrl.clearTags()">Clear tags</a>
         <div class="btn-toolbar">
           <div class="btn-group">
-            <a href="#" class="btn btn-sm btn-primary active"><i class="fa fa-th"></i></a>
-            <a href="#" class="btn btn-sm btn-primary"><i class="fa fa-list"></i></a>
+            <a href class="btn btn-sm btn-primary active"><i class="fa fa-th"></i></a>
+            <a href class="btn btn-sm btn-primary disabled"><i class="fa fa-list"></i></a>
           </div>
         </div>
       </div>
