--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,8 @@
 </div>
 <div class="row tile-container" ng-controller="ControlController as controlCtrl">
   <div class="cols">
-    <div class="tile" ng-repeat="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags)">
+    <!--<div class="tile" ng-repeat="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags)">-->
+    <div class="tile" dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:9)">
         <div class="tile-title">
           <a href="#/c/{{ control.objectId }}/{{ control.name }}">
             {{ control.name }}
@@ -54,6 +55,7 @@
         </div>
     </div>
   </div>
+  <dir-pagination-controls template-url="app/control/dirPagination.tpl.html" class="text-center"></dir-pagination-controls>
   <div class="message" ng-show="!filteredControls.length">
     <div class="col-xs-12 text-center">
       <h4>No controls found :(</h4>
