--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Curated Controls - Hand picked, open source controls for iOS</title>
 
     <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/flat-ui.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/flexslider.css" rel="stylesheet">
@@ -19,6 +19,8 @@
 
     <script src="assets/js/jquery.flexslider.js"></script>
     <script src="assets/js/angular-flexslider.js"></script>
+
+    <script src="assets/js/dirPagination.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
@@ -34,7 +36,7 @@
   <body>
     <div class="topright">
       <a class="btn btn-info btn-xs btn-embossed" href>Tip</a>
-      <a class="btn btn-danger btn-xs btn-embossed" href="#/help">Help</a>
+      <a class="btn btn-danger btn-xs btn-embossed" href="" data-toggle="modal" data-target="#help-modal">Help</a>
     </div>
     <div class="text-center" id="beta">
       <span class="label label-danger">BETA</span>
@@ -47,9 +49,38 @@
       <div ng-view></div>
     </div>
     <div class="footer text-center">
-      <small>Curated by <a href="http://lyxit.se">Lyxit</a></small>
+      <div class="row">
+        <small>Curated by <a href="http://lyxit.se">Lyxit</a></small>
+      </div>
+      <div class="row">
+        <small><a href="">Terms of Service</a> - <a href="">Privacy Policy</a></small>
+      </div>
     </div>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog modal-flat">
+        <div class="modal-content modal-content-flat">
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-xs-6 col-xs-offset-3">
+                  <h4 class="text-danger">Help</h4>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-6 col-xs-offset-3">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <div class="text-center">
+              <button type="button" class="btn btn-success" data-dismiss="modal">Okay!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="assets/js/flat-ui.min.js"></script>
   </body>
 </html>
