--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div class="topright">
-      <a class="btn btn-info btn-xs btn-embossed" href>Tip</a>
+      <a class="btn btn-info btn-xs btn-embossed" href=""  data-toggle="modal" data-target="#tips-modal">Tip</a>
       <a class="btn btn-danger btn-xs btn-embossed" href="" data-toggle="modal" data-target="#help-modal">Help</a>
     </div>
     <div class="text-center" id="beta">
@@ -56,7 +56,53 @@
         <small><a href="">Terms of Service</a> - <a href="">Privacy Policy</a></small>
       </div>
     </div>
-    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <!--- TIPS MODAL -->
+    <div class="modal fade" id="tips-modal" tabindex="-1" role="dialog" aria-labelledby="help-label">
+      <div class="modal-dialog modal-flat">
+        <div class="modal-content modal-content-flat">
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-xs-6 col-xs-offset-3">
+                  <h4 class="text-info">Tip</h4>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-6 col-xs-offset-3">
+                  <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                      <label for="inputEmail1" class="col-lg-2 control-label">Name</label>
+                      <div class="col-lg-10">
+                        <input type="email" class="form-control" id="tip-source" placeholder="Name">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="inputEmail1" class="col-lg-2 control-label">Source <span class="text-danger">*</span></label>
+                      <div class="col-lg-10">
+                        <input type="email" class="form-control" id="tip-source" placeholder="GitHub, BitBucket, etc..">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-lg-offset-2 col-lg-10">
+                        <button type="submit" class="btn btn-success pull-right">Send</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <div class="text-center">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--- END TIPS MODAL -->
+    <!--- HELP MODAL -->
+    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="tips-label">
       <div class="modal-dialog modal-flat">
         <div class="modal-content modal-content-flat">
           <div class="modal-body">
@@ -81,6 +127,7 @@
         </div>
       </div>
     </div>
+    <!--- END HELP MODAL -->
     <script src="assets/js/flat-ui.min.js"></script>
   </body>
 </html>
