--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="assets/css/flat-ui.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/flexslider.css" rel="stylesheet">
+    <link href="assets/css/loading-bar.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -21,6 +22,8 @@
     <script src="assets/js/angular-flexslider.js"></script>
 
     <script src="assets/js/dirPagination.js"></script>
+
+    <script src="assets/js/loading-bar.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
