--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,48 @@
 <div class="row">
-  <div class="col-xs-8 col-xs-offset-2 menu">
+  <div class="col-xs-8 col-xs-offset-2 menu" ng-controller="SettingsController as settingsCtrl">
     <div class="row search">
       <input type="text" class="form-control search" placeholder="Search controls..">
     </div>
-    <div ng-controller="TagController as tagCtrl">
-      <div class="row tags">
-        <span class="tag label label-default" ng-repeat="tag in tagCtrl.tags" ng-click="tagCtrl.toggleTag(tag)" ng-class="{ selected:tagCtrl.tagIsSelected(tag) }">{{ tag }}</span>
-      </div>
-      <div class="row options">
-        <a class="btn btn-primary btn-sm btn-embossed pull-left" href ng-click="tagCtrl.clearTags()">Clear tags</a>
-        <div class="btn-toolbar">
-          <div class="btn-group">
-            <a href class="btn btn-sm btn-primary active"><i class="fa fa-th"></i></a>
-            <a href class="btn btn-sm btn-primary disabled"><i class="fa fa-list"></i></a>
-          </div>
+    <div class="row tags">
+      <span class="tag label label-default" ng-repeat="tag in settingsCtrl.tags" ng-click="settingsCtrl.toggleTag(tag)" ng-class="{ selected:settingsCtrl.tagIsSelected(tag) }">{{ tag }}</span>
+    </div>
+    <div class="row options">
+      <a class="btn btn-primary btn-sm btn-embossed pull-left" href ng-click="settingsCtrl.clearTags()">Clear tags</a>
+      <div class="btn-toolbar">
+        <div class="btn-group">
+          <a href class="btn btn-sm btn-primary active"><i class="fa fa-th"></i></a>
+          <a href class="btn btn-sm btn-primary"><i class="fa fa-list"></i></a>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="row tile-container" ng-controller="ControlController as controlCtrl">
+<div class="row control-container" ng-controller="ControlController as controlCtrl">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Tags</th>
+            <th>GitHub</th>
+            <th>Info</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:2)">
+            <td>{{ control.name }}</td>
+            <td>{{ control.description }}</td>
+            <td><span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span></td>
+            <td class="text-center"><a href="{{ control.link }}"><i class="fa fa-2x fa-github"></i></a></td>
+            <td class="text-center"><a href="#/c/{{ control.objectId }}/{{ control.name }}">More</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+<!--
   <div class="cols">
     <div class="tile" dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:9)">
         <div class="tile-title">
@@ -54,7 +77,10 @@
         </div>
     </div>
   </div>
-  <dir-pagination-controls template-url="app/control/dirPagination.tpl.html" class="text-center"></dir-pagination-controls>
+-->
+  <div class="row">
+    <dir-pagination-controls template-url="app/control/dirPagination.tpl.html" class="text-center"></dir-pagination-controls>
+  </div>
   <div class="message" ng-show="!filteredControls.length">
     <div class="col-xs-12 text-center">
       <h4>{{ controlCtrl.msg }}</h4>
