--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <script src="app/control/single-control/singlecontrol.controller.js"></script>
 
-    <script src="app/tags/tag.controller.js"></script>
-    <script src="app/tags/tag.service.js"></script>
+    <script src="app/settings/settings.controller.js"></script>
+    <script src="app/settings/settings.service.js"></script>
 
     <script src="app/help/help.directive.js"></script>
 
