--- a/app/index.html
+++ b/app/index.html
@@ -10,41 +10,16 @@
       <a class="btn btn-primary btn-sm btn-embossed pull-left" href ng-click="settingsCtrl.clearTags()">Clear tags</a>
       <div class="btn-toolbar">
         <div class="btn-group">
-          <a href class="btn btn-sm btn-primary active"><i class="fa fa-th"></i></a>
-          <a href class="btn btn-sm btn-primary"><i class="fa fa-list"></i></a>
+          <a href class="btn btn-sm btn-primary" ng-class="{ active:!settingsCtrl.styleList }" ng-click="settingsCtrl.setStyleGrid()"><i class="fa fa-th"></i></a>
+          <a href class="btn btn-sm btn-primary" ng-class="{ active:settingsCtrl.styleList }" ng-click="settingsCtrl.setStyleList()"><i class="fa fa-list"></i></a>
         </div>
       </div>
     </div>
   </div>
 </div>
 <div class="row control-container" ng-controller="ControlController as controlCtrl">
-  <div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Tags</th>
-            <th>GitHub</th>
-            <th>Info</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:2)">
-            <td>{{ control.name }}</td>
-            <td>{{ control.description }}</td>
-            <td><span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span></td>
-            <td class="text-center"><a href="{{ control.link }}"><i class="fa fa-2x fa-github"></i></a></td>
-            <td class="text-center"><a href="#/c/{{ control.objectId }}/{{ control.name }}">More</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-<!--
-  <div class="cols">
-    <div class="tile" dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:9)">
+  <div class="cols" ng-hide="controlCtrl.styleList">
+    <div class="tile" dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:controlCtrl.itemsPerPage)">
         <div class="tile-title">
           <a href="#/c/{{ control.objectId }}/{{ control.name }}">
             {{ control.name }}
@@ -77,7 +52,30 @@
         </div>
     </div>
   </div>
--->
+  <div class="row" ng-show="controlCtrl.styleList">
+    <div class="col-xs-10 col-xs-offset-1">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Tags</th>
+            <th>GitHub</th>
+            <th>Info</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:controlCtrl.itemsPerPage)">
+            <td>{{ control.name }}</td>
+            <td>{{ control.description }}</td>
+            <td><span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span></td>
+            <td class="text-center"><a href="{{ control.link }}"><i class="fa fa-2x fa-github"></i></a></td>
+            <td class="text-center"><a href="#/c/{{ control.objectId }}/{{ control.name }}">More</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
   <div class="row">
     <dir-pagination-controls template-url="app/control/dirPagination.tpl.html" class="text-center"></dir-pagination-controls>
   </div>
