--- a/app/control/single-control/index.html
+++ b/app/control/single-control/index.html
@@ -4,10 +4,36 @@
   </div>
   <div class="container">
     <div class="row">
+      <div class="col-xs-12 text-center">
+        <h2 class="text-primary">{{ singleCtrl.control.name }}</h2>
+      </div>
+    </div>
+    <div class="col-xs-6 text-center">
+      <div class="col-xs-10 col-xs-offset-1 single-control-images" ng-show="singleCtrl.control.images.length">
+        <flex-slider slide="image in singleCtrl.control.images track by $index" animation="slide" slideshow=false prev-text="" next-text="">
+          <li>
+            <img ng-src="{{ image.url }}" class="img-responsive img-rounded">
+          </li>
+        </flex-slider>
+      </div>
+    </div>
+    <div class="col-xs-4 text-center">
+      <div class="row single-control-description">
+        <p>{{ singleCtrl.control.description }}</p>
+      </div>
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+      <div class="row">
+      </div>
+    </div>
+    <!--
+    <div class="row">
       <div class="col-xs-4 col-xs-offset-1 text-center single-control-images" ng-show="singleCtrl.control.images.length">
         <flex-slider slide="image in singleCtrl.control.images" animation="slide" slideshow=false prev-text="" next-text="">
           <li>
-            <img ng-src="{{ image }}" class="img-responsive img-rounded">
+            <img ng-src="{{ image.url }}" class="img-responsive img-rounded">
           </li>
         </flex-slider>
       </div>
@@ -45,8 +71,9 @@
         <span class="label label-default" ng-repeat="tag in singleCtrl.control.tags">{{ tag }}</span>
       </div>
     </div>
-    <div class="row text-center single-control-report">
-      <a class="btn btn-danger btn-xs btn-embossed" href>Report</a>
-    </div>
+  -->
+  </div>
+  <div class="row text-center single-control-report">
+    <a class="btn btn-danger btn-xs btn-embossed" href>Report</a>
   </div>
 </div>
