--- a/app/control/single-control/index.html
+++ b/app/control/single-control/index.html
@@ -6,6 +6,7 @@
     <div class="row">
       <div class="col-xs-12 text-center">
         <h2 class="text-primary">{{ singleCtrl.control.name }}</h2>
+        <small>by {{ singleCtrl.control.author }}</small>
       </div>
     </div>
     <div class="col-xs-6 text-center">
@@ -22,56 +23,21 @@
         <p>{{ singleCtrl.control.description }}</p>
       </div>
       <div class="row">
-      </div>
-      <div class="row">
-      </div>
-      <div class="row">
-      </div>
-    </div>
-    <!--
-    <div class="row">
-      <div class="col-xs-4 col-xs-offset-1 text-center single-control-images" ng-show="singleCtrl.control.images.length">
-        <flex-slider slide="image in singleCtrl.control.images" animation="slide" slideshow=false prev-text="" next-text="">
-          <li>
-            <img ng-src="{{ image.url }}" class="img-responsive img-rounded">
-          </li>
-        </flex-slider>
-      </div>
-      <div class="text-center single-control-description col-xs-6" ng-class="{ 'col-xs-offset-3':singleCtrl.control.images.length < 1}" >
-        <h4 class="text-primary single-control-title">{{ singleCtrl.control.name }}</h4>
-        <span>{{ singleCtrl.control.description }}</span>
-        <h6>Info</h6>
-        <div class="row text-left">
-          <div class="col-xs-7 col-xs-offset-3">
-            <div class="col-xs-6">
-              <div class="row">
-                <p alt="License"><i class="fa fa-copyright"></i> {{ singleCtrl.control.license }}</p>
-              </div>
-              <div class="row">
-                <p alt="License"><i class="fa fa-copyright"></i> CocoaPods </p>
-              </div>
-              <div class="row">
-                <p alt="License"><i class="fa fa-copyright"></i> Author </p>
-              </div>
-            </div>
-            <div class="col-xs-6">
-              <div class="row">
-                <p alt="Created at"><i class="fa fa-plus"></i> {{ singleCtrl.github.created_at | date }}</p>
-              </div>
-              <div class="row">
-                <p alt="Last commit at"><i class="fa fa-exchange"></i> {{ singleCtrl.github.pushed_at | date }}</p>
-              </div>
-              <div class="row">
-                <p alt="Last commit at"><i class="fa fa-exchange"></i> {{ singleCtrl.github.pushed_at | date }}</p>
-              </div>
-            </div>
-          </div>
+        <div class="col-xs-6 single-control-info">
+          <p>License: {{ singleCtrl.control.license }}</p>
+          <p>Language: {{ singleCtrl.control.language }}</p>
+          <p>Last commit:</p>
+          <p>Stars:</p>
+          <p>Forks:</p>
         </div>
-        <h6>Tags</h6>
-        <span class="label label-default" ng-repeat="tag in singleCtrl.control.tags">{{ tag }}</span>
+        <div class="col-xs-6">
+          <span class="label label-default" ng-repeat="tag in singleCtrl.control.tags">{{ tag }}</span>
+        </div>
+      </div>
+      <div class="row">
+        <a href="{{ singleCtrl.control.link }}" class="btn btn-info btn-block">Open on GitHub</a>
       </div>
     </div>
-  -->
   </div>
   <div class="row text-center single-control-report">
     <a class="btn btn-danger btn-xs btn-embossed" href>Report</a>
