Add report modal and directive

--- a/app/control/single-control/index.html
+++ b/app/control/single-control/index.html
@@ -40,6 +40,7 @@
     </div>
   </div>
   <div class="row text-center single-control-report">
-    <a class="btn btn-danger btn-xs btn-embossed" href>Report</a>
+    <a class="btn btn-danger btn-xs btn-embossed" href=""  data-toggle="modal" data-target="#report-modal">Report</a>
   </div>
+  <report-modal></report-modal>
 </div>
