--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="app/control/control.service.js"></script>
 
     <script src="app/control/single-control/singlecontrol.controller.js"></script>
+    <script src="app/control/single-control/report.directive.js"></script>
 
     <script src="app/settings/settings.controller.js"></script>
     <script src="app/settings/settings.service.js"></script>
