--- a/app/control/single-control/index.html
+++ b/app/control/single-control/index.html
@@ -26,9 +26,9 @@
         <div class="col-xs-6 single-control-info">
           <p>License: {{ singleCtrl.control.license }}</p>
           <p>Language: {{ singleCtrl.control.language }}</p>
-          <p>Last commit:</p>
-          <p>Stars:</p>
-          <p>Forks:</p>
+          <p>Last commit: {{ singleCtrl.control.github.updated_at | date }}</p>
+          <p>Stars: {{ singleCtrl.control.github.stargazers_count | number }}</p>
+          <p>Forks: {{ singleCtrl.control.github.forks | number }}</p>
         </div>
         <div class="col-xs-6">
           <span class="label label-default" ng-repeat="tag in singleCtrl.control.tags">{{ tag }}</span>
