--- a/app/control/single-control/index.html
+++ b/app/control/single-control/index.html
@@ -21,17 +21,15 @@
     <div class="col-xs-4 text-center">
       <div class="row single-control-description">
         <p>{{ singleCtrl.control.description }}</p>
+        <span class="label label-success" ng-repeat="tag in singleCtrl.control.tags">{{ tag }}</span>
       </div>
       <div class="row">
-        <div class="col-xs-6 single-control-info">
+        <div class="col-xs-12  single-control-info">
           <p>License: {{ singleCtrl.control.license }}</p>
           <p>Language: {{ singleCtrl.control.language }}</p>
           <p>Last commit: {{ singleCtrl.control.github.updated_at | date }}</p>
           <p>Stars: {{ singleCtrl.control.github.stargazers_count | number }}</p>
           <p>Forks: {{ singleCtrl.control.github.forks | number }}</p>
-        </div>
-        <div class="col-xs-6">
-          <span class="label label-default" ng-repeat="tag in singleCtrl.control.tags">{{ tag }}</span>
         </div>
       </div>
       <div class="row">
