--- a/app/help/index.html
+++ b/app/help/index.html
@@ -6,7 +6,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-xs-6 col-xs-offset-3">
-              <h4 class="text-danger">Help</h4>
+              <h4 class="text-success">Help</h4>
             </div>
           </div>
           <div class="row">
@@ -15,7 +15,7 @@
               <p>New controls are added every day and we appreciate a tip if you know a great control we're not listing.</p>
               <p>A lot of the controls are available through the dependency manager <code>CocoaPods</code>. If you haven't used CocoaPods you can read more about it <a href class="text-primary">here</a> and how to get started <a href class="text-primary">here</a>.</p>
               <h6 class="text-danger">Beta</h6>
-              <p>We are currently in beta and the site is still under development. If you find any errors, bugs or have any feedback <em>please</em> let us know. You can send an email to <a href="mailto:hello@curatedcontrols.com" class="text-primary">hello@curatedcontrols.com</a> or just reach out to <a href class="text-primary">@curatedcontrols</a>.
+              <p>We are currently in beta and the site is still under development. If you find any errors, bugs or have any feedback <em>please</em> let us know. You can send an email to <a href="mailto:hello@curatedcontrols.com" class="text-primary">hello@curatedcontrols.com</a> or just reach us at <a href class="text-primary">@curatedcontrols</a>.
             </div>
           </div>
         </div>
