--- a/app/index.html
+++ b/app/index.html
@@ -20,43 +20,45 @@
 <div class="row control-container" ng-controller="ControlController as controlCtrl">
   <div class="cols" ng-hide="controlCtrl.styleList">
     <div class="tile" dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:controlCtrl.itemsPerPage)">
-        <div class="tile-title">
-          <a href="#/c/{{ control.objectId }}/{{ control.name }}">
-            {{ control.name }}
-          </a>
-        </div>
-        <div class="tile-body">
-          <div class="row images">
-            <div class="col-xs-10 col-xs-offset-1">
-              <flex-slider slide="image in control.images track by $index" animation="slide" slideshow=false prev-text="" next-text="">
-                <li>
-                  <img ng-src="{{ image.url }}" class="img-responsive img-rounded">
-                </li>
-              </flex-slider>
-            </div>
-          </div>
-          <div class="row tile-description">
-            {{ control.description }}
-          </div>
-          <div class="row tile-tags">
-            <div class="col-xs-12">
-              <span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span>
-            </div>
+      <img ng-show="controlCtrl.isNew(control)" src="assets/img/ribbon-new.svg" alt="ribbon" class="tile-hot-ribbon">
+      <div class="tile-title">
+        <a href="#/c/{{ control.objectId }}/{{ control.name }}">
+          {{ control.name }}
+        </a>
+      </div>
+      <div class="tile-body">
+        <div class="row images">
+          <div class="col-xs-10 col-xs-offset-1">
+            <flex-slider slide="image in control.images track by $index" animation="slide" slideshow=false prev-text="" next-text="">
+              <li>
+                <img ng-src="{{ image.url }}" class="img-responsive img-rounded">
+              </li>
+            </flex-slider>
           </div>
         </div>
-        <div class="tile-footer">
-          <div class="btn-group btn-group-justified">
-            <a class="btn btn-xs btn-default" href="{{ control.link }}"><i class="fa fa-2x fa-github"></i></a>
-            <a class="btn btn-xs btn-default" href="#/c/{{ control.objectId }}/{{ control.name }}"><strong>More</strong></a>
+        <div class="row tile-description">
+          {{ control.description }}
+        </div>
+        <div class="row tile-tags">
+          <div class="col-xs-12">
+            <span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span>
           </div>
         </div>
+      </div>
+      <div class="tile-footer">
+        <div class="btn-group btn-group-justified">
+          <a class="btn btn-xs btn-default" href="{{ control.link }}"><i class="fa fa-2x fa-github"></i></a>
+          <a class="btn btn-xs btn-default" href="#/c/{{ control.objectId }}/{{ control.name }}"><strong>More</strong></a>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row" ng-show="controlCtrl.styleList">
-    <div class="col-xs-10 col-xs-offset-1">
+    <div class="col-xs-12">
       <table class="table table-striped">
         <thead>
           <tr>
+            <th>Images</th>
             <th>Name</th>
             <th>Description</th>
             <th>Tags</th>
@@ -66,6 +68,11 @@
         </thead>
         <tbody>
           <tr dir-paginate="control in filteredControls = (controlCtrl.controls | filter:controlCtrl.tags | itemsPerPage:controlCtrl.itemsPerPage)">
+            <td class="imagecell">
+              <div class="col-xs-12">
+                <img class="img-responsive" ng-src="{{ image.url }}" ng-repeat="image in control.images"/>
+              </div>
+              </td>
             <td>{{ control.name }}</td>
             <td>{{ control.description }}</td>
             <td><span class="label label-default" ng-repeat="tag in control.tags">{{ tag }}</span></td>
