--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <small>Curated by <a href="http://lyxit.se">Lyxit</a></small>
         </div>
         <div class="row">
-          <small><a href="">Terms of Service</a> - <a href="">Privacy Policy</a></small>
+          <small><a href="#/tos">Terms of Service</a> - <a href="#/privacy">Privacy Policy</a></small>
         </div>
       </div>
     </div>
