--- a/app/privacy/index.html
+++ b/app/privacy/index.html
@@ -1,1 +1,6 @@
-PRIVACY
+<div>
+  <div class="back-button">
+    <a class="btn btn-danger btn-sm btn-embossed" href="#/">Back</a>
+  </div>
+  PRIVACY
+</div>
