--- a/app/tos/index.html
+++ b/app/tos/index.html
@@ -1,1 +1,6 @@
-TOS
+<div>
+  <div class="back-button">
+    <a class="btn btn-danger btn-sm btn-embossed" href="#/">Back</a>
+  </div>
+  TOS
+</div>
