Add basic search

--- a/app/help/index.html
+++ b/app/help/index.html
@@ -13,9 +13,9 @@
             <div class="col-xs-6 col-xs-offset-3">
               <p>Curated Controls is a collection of hand-picked open source iOS components. All included components is required to be of high quality.</p>
               <p>New controls are added every day and we appreciate a tip if you know a great control we're not listing.</p>
-              <p>A lot of the controls are available through the dependency manager <code>CocoaPods</code>. If you haven't used CocoaPods you can read more about it <a href class="text-primary">here</a> and how to get started <a href class="text-primary">here</a>.</p>
+              <p>A lot of the controls are available through the dependency manager <code>CocoaPods</code>. If you haven't used CocoaPods you can read more about it <a href="https://cocoapods.org/about" class="text-primary">here</a> and how to get started <a href="https://guides.cocoapods.org/using/getting-started.html" class="text-primary">here</a>.</p>
               <h6 class="text-danger">Beta</h6>
-              <p>We are currently in beta and the site is still under development. If you find any errors, bugs or have any feedback <em>please</em> let us know. You can send an email to <a href="mailto:hello@curatedcontrols.com" class="text-primary">hello@curatedcontrols.com</a> or just reach us at <a href class="text-primary">@curatedcontrols</a>.
+              <p>We are currently in beta and the site is still under development. If you find any errors, bugs or have any feedback <em>please</em> let us know. You can send an email to <a href="mailto:hello@curatedcontrols.com" class="text-primary">hello@curatedcontrols.com</a> or just reach us at <a href="http://twitter.com/curatedcontrols" class="text-primary">@curatedcontrols</a>.
             </div>
           </div>
         </div>
