--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-xs-8 col-xs-offset-2 menu" ng-controller="SettingsController as settingsCtrl">
     <div class="row search">
-      <input type="text" class="form-control search" placeholder="Search controls..">
+      <input type="text" class="form-control search" ng-model="searchString" ng-change="settingsCtrl.onSearch(searchString)" placeholder="Search controls..">
     </div>
     <div class="row tags">
       <span class="tag label label-default" ng-repeat="tag in settingsCtrl.tags | orderBy:tag" ng-click="settingsCtrl.toggleTag(tag)" ng-class="{ selected:settingsCtrl.tagIsSelected(tag) }">{{ tag }}</span>
@@ -20,7 +20,7 @@
 </div>
 <div class="row control-container" ng-controller="ControlController as controlCtrl">
   <div class="cols" ng-hide="controlCtrl.styleList">
-    <div class="tile" dir-paginate="control in filteredControls = (controlCtrl.controls | itemsPerPage:controlCtrl.itemsPerPage | filter:controlCtrl.tags | orderBy:controlCtrl.dateSort:true)">
+    <div class="tile" dir-paginate="control in filteredControls = (controlCtrl.controls | itemsPerPage:controlCtrl.itemsPerPage | filter:controlCtrl.tags | filter:controlCtrl.searchString | orderBy:controlCtrl.dateSort:true)">
       <img ng-show="controlCtrl.isNew(control)" src="assets/img/ribbon-new.svg" alt="ribbon" class="tile-hot-ribbon">
       <div class="tile-title">
         <a href="#/c/{{ control.objectId }}/{{ control.name }}">
