Rewrite to new file structure and database structure

--- a/a/index.html
+++ b/a/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-xs-6" ng-controller="NewController as newCtrl">
           <div class="col-xs-6">
-            <h4>Input control <span ng-class="{ 'text-success':newCtrl.ready, 'text-danger':!newCtrl.ready }">●</span></h4>
+            <h4>Input control <span ng-class="{ 'text-success':newCtrl.ready, 'text-danger':!newCtrl.ready }" alt="Connected">●</span></h4>
           </div>
           <div class="col-xs-6">
             <button class="btn btn-default" type="button" ng-click="newCtrl.reset()">Reset</button>
