--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,12 +1,12 @@
-<div ng-controller="Help as vm">
-  <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="tips-label">
+<div ng-controller="About as vm">
+  <div class="modal fade" id="about-modal" tabindex="-1" role="dialog" aria-labelledby="about-label">
     <div class="modal-dialog modal-flat">
       <div class="modal-content modal-content-flat">
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-6 col-xs-offset-3">
-                <h4 class="text-success">Help</h4>
+                <h4 class="text-success">About</h4>
               </div>
             </div>
             <div class="row">
