--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <script src="app/control/control.js"></script>
     <script src="app/control/report.js"></script>
 
-    <!-- Help -->
-    <script src="app/help/help.module.js"></script>
-    <script src="app/help/help.js"></script>
+    <!-- About -->
+    <script src="app/about/about.module.js"></script>
+    <script src="app/about/about.js"></script>
 
     <!-- Tips -->
     <script src="app/tips/tips.module.js"></script>
@@ -68,7 +68,7 @@
       <div ng-include="'app/layout/footer.html'"></div>
     </div>
     <ng-include src="'app/tips/tips.html'"></ng-include>
-    <ng-include src="'app/help/help.html'"></ng-include>
+    <ng-include src="'app/about/about.html'"></ng-include>
     <script src="scripts/flat-ui.min.js"></script>
   </body>
 </html>
