--- a/app/tips/tips.html
+++ b/app/tips/tips.html
@@ -1,6 +1,6 @@
 <!--- TIPS MODAL -->
 <div ng-controller="Tips as vm">
-  <div class="modal fade" id="tips-modal" tabindex="-1" role="dialog" aria-labelledby="help-label">
+  <div class="modal fade" id="tips-modal" tabindex="-1" role="dialog" aria-labelledby="tips-label">
     <div class="modal-dialog modal-flat">
       <div class="modal-content modal-content-flat">
         <div class="modal-body">
