Add language filter

--- a/a/index.html
+++ b/a/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Curated Controls - Hand picked, open source controls for iOS</title>
 
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
-    <link href="../assets/css/flat-ui.css" rel="stylesheet">
-    <link href="../assets/css/style.css" rel="stylesheet">
+    <link href="../content/css/bootstrap.css" rel="stylesheet">
+    <link href="../content/css/flat-ui.css" rel="stylesheet">
+    <link href="../content/css/style.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -144,6 +144,6 @@
         </div>
       </div>
     </div>
-    <script src="../assets/js/flat-ui.min.js"></script>
+    <script src="../scripts/flat-ui.min.js"></script>
   </body>
 </html>
